# FinOS

./: .gitignore  ACCEPTANCE.md  MIGRATIONS.md  README.md  RECOVERY.md  RELEASE.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_REVIEW.md  SUPPORT.md  THREAT_MODEL.md  pyproject.toml
.githooks/: pre-commit
extensions/finance/: README.md  extension.yaml
extensions/finance/contracts/: catalog-0.8.0.json  catalog-0.9.0.json  catalog-1.2.0.json
extensions/finance/examples/: cashflow-calculated.event.json  import-transactions.command.json
extensions/finance/schemas/: account_balance_history.response.schema.json  account_commands.schema.json  account_detail.response.schema.json  account_events.schema.json  account_list.response.schema.json  analyze_import_file.command.schema.json  asset_allocation.response.schema.json  backup_list.response.schema.json  balance_difference_documented.event.schema.json  balance_reconciliation.response.schema.json  bank_monthly_export.response.schema.json  capability_manifest.response.schema.json  (+79 more)
src/finance_extension/: __init__.py  acceptance.py  accounts.py  application.py  cashflow.py  categories.py  classification.py  cli.py  contract_compatibility.py  crypto.py  diagnostics.py  error_catalog.py  forecasting.py  import_ui.py  importer.py  multi_account_import.py  reconciliation.py  recovery.py  release_build.py  release_integrity.json  release_security.py  release_verify.py  repository_guard.py  schema_check.py  schema_validation.py  storage_check.py  storage_policy.py  store.py  workspace_lock.py
tests/: test_acceptance.py  test_accounts.py  test_application.py  test_capacity_boundaries.py  test_classification.py  test_contract_compatibility.py  test_diagnostics.py  test_forecasting.py  test_hardening.py  test_multi_account_import.py  test_reconciliation.py  test_recovery.py  test_release_security.py  test_release_verify.py  test_vertical_slice.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: generate-contracts.mjs  offline-check.mjs
ui/src/: App.test.tsx  App.tsx  Imports.test.tsx  Imports.tsx  bridge.ts  mockData.ts  styles.css
(+8 files in other folders)
