[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-os-finance"
version = "1.2.0"
description = "Local-only, encrypted personal-finance vertical slice"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Internal use only"}
dependencies = [
  "cryptography==49.0.0",
  "jsonschema[format-nongpl]==4.26.0",
  "keyring==25.7.0",
]

[project.optional-dependencies]
dev = ["build==1.5.0", "pytest==9.1.1", "ruff==0.15.22"]

[project.scripts]
finance = "finance_extension.cli:main"
finance-release = "finance_extension.release_build:main"
finance-release-verify = "finance_extension.release_verify:main"
finance-acceptance = "finance_extension.acceptance:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_extension"]

[tool.hatch.build.targets.wheel.force-include]
"extensions/finance" = "extensions/finance"
"ui/dist" = "finance_extension/ui"

[tool.pytest.ini_options]
testpaths = ["tests", "extensions/finance/tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.ignore = ["E701", "E702"]
